# selda

./: .gitignore  .travis.yml  ChangeLog.hs  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project  default.nix  index.html  pgtest-compose.yml  robots.txt  selda-build-tools.cabal  selda.cabal  sitemap.txt  stack-ghc-9.0.yaml  stack-ghc-9.2.yaml  stack.yaml
.github/workflows/: pages.yml  run-tests.yml
examples/shopping-list/: shopping-list.cabal  shopping.hs
selda/: ChangeLog.md  default.nix  selda.cabal
selda-dev-tools/: ChangeLog.hs  selda-dev-tools.cabal
selda-json/: selda-json.cabal
selda-json/src/Database/Selda/: JSON.hs
selda-mysql/: selda-mysql.cabal
selda-mysql/src/Database/Selda/: MySQL.hs
selda-mysql/src/Database/Selda/MySQL/: Encoding.hs
selda-postgresql/: default.nix  selda-postgresql.cabal
selda-postgresql/src/Database/Selda/: PostgreSQL.hs
selda-postgresql/src/Database/Selda/PostgreSQL/: Encoding.hs
selda-sqlite/: LICENSE  default.nix  selda-sqlite.cabal
selda-sqlite/src/Database/Selda/: SQLite.hs
selda-sqlite/src/Database/Selda/SQLite/: Parser.hs
selda-tests/: PGConnectInfo.hs  RunTests.hs  default.nix  selda-tests.cabal
selda-tests/test/: RunTests.hs  Tables.hs  Utils.hs
selda-tests/test/Tests/: JSON.hs  MultiConn.hs  Mutable.hs  NonDB.hs  PGConnectionString.hs  Query.hs  Validation.hs
selda/src/Database/: Selda.hs
selda/src/Database/Selda/: Backend.hs  Caching.hs  Column.hs  Compile.hs  Debug.hs  Exp.hs  FieldSelectors.hs  Frontend.hs  Generic.hs  Inner.hs  MakeSelectors.hs  Migrations.hs  Nullable.hs  Prepared.hs  Query.hs  SQL.hs  Selectors.hs  SqlResult.hs  SqlRow.hs  SqlType.hs  Table.hs  Transform.hs  Types.hs  Unsafe.hs  Validation.hs
selda/src/Database/Selda/Backend/: Internal.hs
selda/src/Database/Selda/Query/: Type.hs
selda/src/Database/Selda/SQL/: Print.hs
selda/src/Database/Selda/SQL/Print/: Config.hs
selda/src/Database/Selda/Selectors/: FieldSelectors.hs  MakeSelectors.hs
selda/src/Database/Selda/Table/: Compile.hs  Foreign.hs  Type.hs  Validation.hs
src/Database/: Selda.hs
src/Database/Selda/: Aggregates.hs  Backend.hs  Column.hs  Compile.hs  DeadCols.hs  Inner.hs  PostgreSQL.hs  Query.hs  SQL.hs  SQLite.hs  SqlType.hs  Table.hs  Transform.hs  Types.hs
src/Database/Selda/Query/: Type.hs
src/Database/Selda/SQL/: Print.hs
src/Database/Selda/Table/: Compile.hs
tutorial/: index.html
tutorial/ch1-example-explained/: index.html
tutorial/ch2-destructive-operations/: index.html
tutorial/ch3-advanced-queries/: index.html
website/: compile.hs  highlight.pack.js  index.html  sitemap.txt  style.css  website.cabal
website/assets/: prism.css  prism.js  robots.txt  style.css
website/pages/: index.md  tutorial.md
website/pages/tutorial/: ch1-example-explained.md  ch2-destructive-operations.md  ch3-advanced-queries.md
website/templates/: default.html
website/tutorial/: ch1-example-explained.md
