cabal-version:       >=1.10
name:                selda-json
version:             0.1.1.2
synopsis:            JSON support for the Selda database library.
description:         Types and classes to support storing and querying
                     JSON values using Selda via Aeson.
homepage:            https://valderman.github.io/selda
-- bug-reports:
license:             MIT
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:
category:            Database
build-type:          Simple

library
  exposed-modules:
    Database.Selda.JSON
  build-depends:
      aeson      >=1.0  && <2.3
    , base       >=4.9  && <5
    , bytestring >=0.10 && <0.13
    , selda      >=0.4  && <0.6
    , text       >=1.0  && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
