name:                selda-mysql
version:             0.0.1
synopsis:            MySQL backend for the Selda database EDSL.
description:         MySQL backend for the Selda database EDSL.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Kristof Bastiaensen
maintainer:          kristof at resonata.be
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Selda.MySQL
  other-modules:
    Database.Selda.MySQL.Encoding
  other-extensions:
    GADTs
    RecordWildCards
    OverloadedStrings
    CPP
  build-depends:
      base       >=4.8     && <5
    , exceptions >=0.8     && <0.11
    , selda      >=0.3.5.0 && <0.4
    , mysql-haskell >= 0.8.3.0 && <0.9
    , io-streams    >= 1.2 && < 2.0
    , binary        >= 0.8.3
    , binary-ieee754
    , binary-parsers >= 0.2.1
    , bytestring    >= 0.10.2.0
    , text          >= 1.1 && < 1.3
    , time          >= 1.5.0
    , scientific    == 0.3.*
    , bytestring-lexing == 0.5.*
    , blaze-textual     == 0.2.*
    , vector        >= 0.8

  if impl(ghc < 7.11)
    build-depends:
      transformers  >=0.4 && <0.6
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
