name:                selda-postgresql
version:             0.1.2.1
synopsis:            PostgreSQL backend for the Selda database EDSL.
description:         PostgreSQL backend for the Selda database EDSL.
                     Requires the PostgreSQL @libpq@ development libraries to be
                     installed.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.PostgreSQL
  other-extensions:
    GADTs
    RecordWildCards
    OverloadedStrings
    CPP
  build-depends:
      base             >=4.8     && <5
    , exceptions       >=0.8     && <0.9
    , selda            >=0.1.3.2 && <0.2
    , text             >=1.0     && <1.3
  if !flag(haste)
    build-depends:
        bytestring       >=0.9 && <0.11
      , postgresql-libpq >=0.9 && <0.10
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall