name:                selda-postgresql
version:             0.1.8.1
synopsis:            PostgreSQL backend for the Selda database EDSL.
description:         PostgreSQL backend for the Selda database EDSL.
                     Requires the PostgreSQL @libpq@ development libraries to be
                     installed.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.PostgreSQL
  other-modules:
    Database.Selda.PostgreSQL.Encoding
  other-extensions:
    GADTs
    RecordWildCards
    OverloadedStrings
    CPP
  build-depends:
      base       >=4.9 && <5
    , bytestring >=0.9 && <0.11
    , exceptions >=0.8 && <0.11
    , selda      >=0.5 && <0.6
    , selda-json >=0.1 && <0.2
    , text       >=1.0 && <1.3
  if !flag(haste)
    build-depends:
        postgresql-binary >=0.12 && <0.13
      , postgresql-libpq  >=0.9  && <0.10
      , time              >=1.5  && <1.10
      , uuid-types        >=1.0  && <1.1
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
