name:                selda-sqlite
version:             0.1.6.1
synopsis:            SQLite backend for the Selda database EDSL.
description:         SQLite backend for the Selda database EDSL.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.SQLite
  other-extensions:
    GADTs
    CPP
  build-depends:
      base          >=4.8     && <5
    , exceptions    >=0.8     && <0.11
    , selda         >=0.3.0.0 && <0.4
    , text          >=1.0     && <1.3
  if !flag(haste)
    build-depends:
        direct-sqlite >=2.2   && <2.4
      , directory     >=1.2.2 && <1.4
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall