name:                selda-sqlite
version:             0.1.7.2
synopsis:            SQLite backend for the Selda database EDSL.
description:         Allows the Selda database EDSL to be used with SQLite
                     databases.
homepage:            https://github.com/valderman/selda
license:             MIT
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Selda.SQLite
  other-modules:
    Database.Selda.SQLite.Parser
  other-extensions:
    GADTs
    CPP
  build-depends:
      base          >=4.9 && <5
    , selda         >=0.5 && <0.6
    , text          >=1.0 && <2.2
    , bytestring    >=0.10  && <0.13
    , direct-sqlite >=2.2   && <2.4
    , directory     >=1.2.2 && <1.4
    , exceptions    >=0.8   && <0.11
    , time          >=1.5   && <1.15
    , uuid-types    >=1.0   && <1.1
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
