name:                selda-tests
version:             0.1.0.0
synopsis:            Tests for the Selda database DSL.
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag postgres
  default: False
  description: Run tests using PostgreSQL backend.

library
  default-language:
    Haskell2010

test-suite selda-testsuite
  type:
    exitcode-stdio-1.0
  main-is:
    RunTests.hs
  other-modules:
    Tables
    Utils
    Tests.MultiConn
    Tests.Mutable
    Tests.NonDB
    Tests.Query
    Tests.Validation
  build-depends:
      base       >=4.8  && <5
    , bytestring >=0.10 && <0.11
    , directory  >=1.2  && <1.4
    , exceptions >=0.8  && <0.9
    , HUnit      >=1.4  && <1.7
    , selda
    , text       >=1.1  && <1.3
    , time       >=1.4  && <1.9
  if flag(postgres)
    build-depends: selda-postgresql
    cpp-options:   -DPOSTGRES
  else
    build-depends: selda-sqlite
  hs-source-dirs:
    test, .
  default-language:
    Haskell2010
