name:                selda
version:             0.5.2.0
synopsis:            Multi-backend, high-level EDSL for interacting with SQL databases.
description:         This package provides an EDSL for writing portable, type-safe, high-level
                     database code. Its feature set includes querying and modifying databases,
                     automatic, in-process caching with consistency guarantees, and transaction
                     support.

                     See the project website for a comprehensive tutorial.

                     To use this package you need at least one backend package, in addition to
                     this package. There are currently two different backend packages:
                     selda-sqlite and selda-postgresql.
homepage:            https://selda.link
license:             MIT
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.8.2, GHC == 8.10.1, GHC == 9.0.2, GHC == 9.2.3

source-repository head
  type:     git
  location: https://github.com/valderman/selda.git

library
  exposed-modules:
    Database.Selda
    Database.Selda.Backend
    Database.Selda.Backend.Internal
    Database.Selda.Debug
    Database.Selda.MakeSelectors
    Database.Selda.Migrations
    Database.Selda.Nullable
    Database.Selda.SqlType
    Database.Selda.Unsafe
    Database.Selda.Validation
  other-modules:
    Database.Selda.Column
    Database.Selda.Compile
    Database.Selda.Exp
    Database.Selda.Frontend
    Database.Selda.FieldSelectors
    Database.Selda.Generic
    Database.Selda.Inner
    Database.Selda.Prepared
    Database.Selda.Query
    Database.Selda.Query.Type
    Database.Selda.Selectors
    Database.Selda.SQL
    Database.Selda.SQL.Print
    Database.Selda.SQL.Print.Config
    Database.Selda.SqlRow
    Database.Selda.Table
    Database.Selda.Table.Compile
    Database.Selda.Table.Type
    Database.Selda.Table.Validation
    Database.Selda.Transform
    Database.Selda.Types
  other-extensions:
    OverloadedStrings
    GADTs
    CPP
    MultiParamTypeClasses
    UndecidableInstances
    ScopedTypeVariables
    RankNTypes
    TypeFamilies
    FlexibleInstances
    GeneralizedNewtypeDeriving
    FlexibleContexts
  build-depends:
      base       >=4.10 && <5
    , bytestring >=0.10 && <0.12
    , exceptions >=0.8  && <0.11
    , mtl        >=2.0  && <2.3
    , text       >=1.0  && <1.3
    , time       >=1.5  && <1.12
    , containers >=0.4  && <0.7
    , random     >=1.1  && <1.3
    , uuid-types >=1.0  && <1.1
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
