name:                website
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable ekblad-cc
  main-is:             compile.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:
      base >=4.9
    , text >=1.1
    , markdown >=0.1
    , mustache >=2.2
    , directory >=1.2
    , filepath >=1.4
    , blaze-html >=0.9
    , aeson >=1.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
