name:                shopping-list
version:             0.1.0.0
synopsis:            Example shopping list application using Selda and Scotty.
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable shopping-list
  main-is:          shopping.hs
  build-depends:    base, scotty, selda, selda-sqlite, text, aeson
  default-language: Haskell2010
